--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             font-weight: bold;
             width: 100%;
         }
+        @media only screen and (min-width:768px){
+            nav{
+                height:auto;
+            }
 
         ul {
             margin-left: 10% !important;
