--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-weight: bold;
             width: 100%;
         }
-        @media only screen and (min-width:768px){
+        @media only screen and (max-width:768px){
             nav{
                 height:auto;
             }
