--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
         </div>
         <div class="col-sm-8">
-            <iframe width="720" height="445" src="https://www.youtube.com/embed/tgbNymZ7vqY?"></iframe>
+            <iframe width="100%" height="445" src="https://www.youtube.com/embed/tgbNymZ7vqY?"></iframe>
         </div>
     </div>
 
